--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,11 +60,14 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="button6"/>
+            android:backgroundTint="#17B5B0"
+            android:text="button6" />
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="button7"/>
+            android:backgroundTint="#17B5B0"
+            android:text="button7" />
 
     </LinearLayout>
 
